cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
# cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media-stack
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads 
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: downloads 
          hostPath:
            path: /mnt/windows-media
